syntax = "proto3";

option java_multiple_files = true;
option java_package = "nl.tudelft.htable.protocol.internal";

// Request message for [InternalService.Ping].
message PingRequest {}

// Response message for [InternalService.Ping]
message PingResponse {}

// Request message for [InternalService.Query]
message QueryRequest {}

// Response message for [InternalService.Query].
message QueryResponse {
    // The tablets that the node is serving.
    repeated Tablet tablets = 1;
}

// Request message for [InternalService.Assign]
message AssignRequest {
    // The tablets that the node is assigned.
    repeated Tablet tablets = 1;
}

// Response message for [InternalService.Assign].
message AssignResponse {}

// A tablet that is served by a node.
message Tablet {
    // The name of the table.
    string table_name = 1;

    // The start key of the tablet.
    bytes start_key = 2;

    // The end key of the tablet.
    bytes end_key = 3;
}

service InternalService {
    // Ping a node in the cluster.
    rpc Ping (PingRequest) returns (PingResponse) {}

    // Query a node for the tablets it's serving.
    rpc Query (QueryRequest) returns (QueryResponse) {}

    // Assign the specified tablets to the node.
    rpc Assign (AssignRequest) returns (AssignResponse) {}
}
